sass/style.scss
/* ... */
.navbar.ftm .navbar-brand {
  flex-direction: row;
  font-size: inherit;
  font-weight: 700;
  padding: 0;
  text-transform: uppercase;
  height: 54px;
}

.navbar.ftm .navbar-toggler {
  border: 0;
}

.navbar.ftm .navbar-brand .text {
  display: inline-block;
  font-weight: 700;
}

.navbar.ftm .navbar-nav .nav-link {
  padding: 1rem;
  font-weight: 600;
}

.navbar.ftm .navbar-nav .nav-link:hover {
  background: rgba(255, 255, 255, 0.1);
}

.navbar.ftm .navbar-nav .home-link {
  cursor: pointer;
  color: $text-light;

  padding-left: 42px;
  background-size: 42px;
  line-height: 42px;
  display: block;

  &:hover {
    color: $text-light;
  }
}

.navbar.ftm .nav-item.show,
.navbar.ftm .nav-item.show .nav-link:hover {
  background: #3f5cbb;
}

.navbar.ftm .dropdown-menu {
  border: none;
  border-radius: 0;
  margin-top: 0;
}

.navbar.ftm .dropdown-menu,
.navbar.ftm .dropdown-item {
  background: #3f5cbb;
  color: #fff;
  font-size: $font-size-small;
  font-weight: 600;
}

.navbar.ftm .dropdown-item {
  padding: 0.4rem 1rem;
}

.navbar.ftm .dropdown-item:hover {
  background: $blue;
}

.navbar.ftm .btn-addplace {
  color: #fff;
  background: $pink;
  white-space: nowrap;
  font-weight: 600;
  margin-left: 1rem;
  padding-left: 1rem;
  padding-right: 1.4rem;
}

.navbar.ftm .btn-addplace:hover {
  background: #f84e7c;
}

.navbar.ftm .btn-addplace .icon,
.icon-requester-pin.icon {
  display: inline-block;
  vertical-align: middle;
  height: 18px;
  width: 18px;
  margin-right: 6px;
  position: relative;
  top: -2px;
  background-size: contain;
  background-position: center;
}

.navbar.ftm .xlink {
  display: flex;
  min-height: 100%;
  align-items: center;
}

.navbar.ftm .btn-xlink {
  color: #000;
  background: #fdc276;
  white-space: nowrap;
  font-weight: 600;
  margin-left: 1rem;
  padding-left: 1rem;
  padding-right: 1.4rem;
}

.navbar.ftm .btn-xlink:hover {
  background: #fdd197;
}

.navbar.ftm .btn-xlink .icon,
.icon-ftmakers_logo.icon {
  display: inline-block;
  vertical-align: middle;
  height: 18px;
  width: 18px;
  margin-top: 0px;
  margin-bottom: 0px;
  margin-right: 6px;
  position: relative;
  top: -2px;
  background-size: contain;
  background-position: center;
}

#countries-dropdown .icon,
#countries-dropdown-selector .icon {
  display: inline-block;
  vertical-align: middle;
  height: 18px;
  width: 18px;
  margin-right: 8px;
  position: relative;
  top: -1px;
  background-size: cover;
}

/*********************
  * PARTNERS STYLES *
  *********************/

.content section {
  margin-bottom: 2rem;
}

.page-subhead {
  font-size: $heading-size-3;
  background-color: $yellow;
  padding: 5px 8px;
  display: inline-block;
  margin-bottom: 1rem;
}

.partner-logos {
  width: 100%;
}

.partner-logos-large {
  .partner-logo-container {
    text-align: center;
  }
  #img-logo-canva {
    width: 49%; //should be same as partner-logos-small size
  }
}

.partner-logos-small {
  .partner-logo-container {
    width: 49%;
  }
}

.partner-logo-container {
  display: inline-block;
  padding: 1.5rem;

  img {
    width: 100%;
  }
}

/* Mobile first: Desktop breakpoint overrides below */

@media (min-width: $breakpoint-md) {
  /*********************
  * PARTNERS STYLES *
  *********************/

  .partner-logos-large {
    .partner-logo-container {
      width: 33%;
      text-align: center;
    }
  }

  .partner-logos-small {
    .partner-logo-container {
      width: 19.6%;
    }
  }

  .map-container {
    position: fixed;
    height: calc(100vh - 58px);
    width: 50%;
  }
}

@media (max-width: $breakpoint-md) {
  .search-input {
    margin: 0px;
    margin-right: 15px;
  }

  .navbar.ftm {
    padding: 0;
  }

  .navbar.ftm .navbar-brand {
    margin-left: 0.5rem;
  }

  .navbar.ftm .navbar-nav .nav-link {
    text-align: center;
    padding: 0.75rem;
  }

  .navbar.ftm .dropdown-item {
    text-align: center;
  }

  .navbar.ftm .add-donation-site-form {
    padding: 0 1rem 0.5rem 1rem;
  }

  .navbar.ftm .xlink {
    padding: 0 1rem 0.5rem 1rem;
  }

  .navbar.ftm .btn-addplace {
    width: 100%;
    margin: 0;
  }

  .navbar.ftm .btn-xlink {
    width: 100%;
    margin: 0;
}
}

@media (max-width: $breakpoint-xs) {
  .search-controls {
    justify-content: center;
    padding-top: 5px;
  }
  h2.state {
    padding: 4px 10px;
  }
  h3.city {
    margin-left: 10px;
  }

  .search-filter-container .bg-dark-blue,
  .locations-list-header > *,
  .location {
    padding-left: 1.25rem;
    padding-right: 1.25rem;
  }

  .search-filter-container .bg-dark-blue {
    padding-top: 1.5rem;
    padding-bottom: 1.5rem;
  }

  .search-filter-container h4 {
    font-size: $heading-size-3-mobile;
  }

  .search-filter-container p {
    font-size: $font-size-small;
  }
}

/*************************
  * END MAP SEARCH STYLES *
  *************************/

@media screen and (max-width: $breakpoint-sm) {
  .content-container {
    margin-left: 15px;
    margin-right: 15px;
    width: auto;
  }

  .logo {
    height: 100px;
  }

  .subhead {
    width: 100%;
    padding: 0;
    flex-direction: column;
  }
  .subhead-left {
    border: 0;
    width: 100%;
    padding: 0;
    margin-bottom: 10px;
    text-align: center;
  }
  .subhead-right {
    font-size: 0.9rem;
    width: 80%;
    text-align: center;
  }

  .nav-link {
    font-size: 0.7rem;
  }

  .need-ppe {
    margin-left: 0;
    margin-right: 0;
  }

  #masks-img {
    height: 160px;
  }

  #goggle-img {
    height: 115px;
  }

  #faceshield-img {
    height: 150px;
  }
  .ppe-example-caption {
    margin-top: 4px;
    margin-bottom: 10px;
  }
}
/****************
Data-blog hackery
****************/

div.figure {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
}
div.caption {
  text-align: left;
  font-style: italic;
  margin: 0 auto;
  max-width: 800px;
  color: #666;
}

div.figure img {
  width: 100%;
  height: auto;
  max-width: 800px;
  margin: 1rem auto 0 auto;
  display: block;
}
/* ... */

